# quadre

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
docs/: architecture.md  canvas.md  declarative-layout.md  docker.md  index.md  plugins.md  publishing.md  quickstart.md  testing.md  troubleshooting.md
examples/: custom_width_demo.json  declarative_advanced.json  declarative_all_widgets.json  declarative_complex.json  declarative_dynamic_tables.json  declarative_email.json  declarative_featured.json  declarative_grid.json  declarative_mixed_kpis.json  declarative_overflow_test.json  declarative_simple.json  demo.json  demo_api.py  margins_demo.json  text_truncation_demo.json  titles_demo.json
scripts/: install_fonts_macos.sh
src/ezp/: main.py
src/ezp/components/: __init__.py  cards.py  config.py  declarative_layout.py  global_layouts.py  kpi_layouts.py  layout_intelligence.py  layouts.py  primitives.py  tables.py  variants.py
src/ezp/flex/: __init__.py  engine.py  renderer.py  widgets.py
src/nada/: __main__.py  main.py  theme.py  validator.py
src/nada/components/: __init__.py  cards.py  config.py  image.py  primitives.py  tables.py
src/nada/flex/: __init__.py  engine.py  runner.py
src/quadre/: __init__.py  __main__.py  cairo_canvas.py  cli.py  config.py  defaults.py  font.py  generator.py  logging_configuration.py  main.py  models.py  test.py  theme.py  validator.py
src/quadre/components/: __init__.py  cards.py  config.py  primitives.py  registry.py  status_badge.py  text_utils.py
src/quadre/components/base/: card.py  kpi_card.py  title.py
src/quadre/flex/: __init__.py  adapter.py  api.py  engine.py  helpers.py  layout.py  models.py  runner.py  widgets.py
src/quadre/flex/components/: __init__.py  column.py  root.py  row.py
src/quadre/plugins/: __init__.py  email.py
tests/: conftest.py  test_canvas_margins.py  test_dataref_field_resolution.py  test_examples.py  test_flex_adapter_margins.py  test_flex_builder_api.py  test_flex_clipping.py  test_rendering.py  test_resolve_path_utils.py  test_validate.py  test_validator_suite.py  test_validator_warnings_props.py
tests/pixels/: test_pixels_deterministic.py
tests/plugins/: test_email_plugin.py
tools/: deadcode_scan.py
utils/: font_diagnostic.py  style_comparison.py
