[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"


[project]
name = "quadre"
version = "0.1.0"
description = "A Python CLI tool that generates beautiful dashboard images from JSON data using PIL/Pillow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "pillow>=11.3.0", "pydantic>=2.7,<3" ]


[project.scripts]
quadre = "quadre.__main__:main"
quadre-validate = "quadre.validator:main"


[tool.hatch.build.targets.wheel]
packages = [ "src/quadre" ]


[dependency-groups]
dev = [ "pytest>=8.4.1", "ruff>=0.12.11" ]
